--- a/deploy/charts/dragonfly/templates/cdn/cdn-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/cdn/cdn-configmap.yaml
@@ -73,7 +73,7 @@ data:
         server {
             listen              {{ .Values.cdn.service.nginxTargetPort }};
             location / {
-              root {{ .Values.cdn.config.plugins.storage.config.baseDir }};
+              root {{ with $s := index .Values.cdn.config.plugins.storageDriver 0 }}{{ $s.config.baseDir }} {{ end -}};
             }
         }
     }
