--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 before:
   hooks:
     - go mod download
-    - go install github.com/golang/mock/mockgen@v1.6.0
+    - GO111MODULE=on go get github.com/golang/mock/mockgen@v1.6.0
     - go generate ./...
 
 builds:
