--- a/docs/en/config/cdn-nginx.conf
+++ b/docs/en/config/cdn-nginx.conf
@@ -45,7 +45,7 @@ http {
     server {
         listen              8001;
         location / {
-            root /home/admin/cdn-system/repo;
+            root /home/admin/ftp;
         }
     }
 }
