--- a/docs/en/config/scheduler.yaml
+++ b/docs/en/config/scheduler.yaml
@@ -4,7 +4,7 @@
 debug: false
 
 server:
-  # ListenPort is the ip and port supernode server listens on.
+  # ListenPort is the ip and port scheduler server listens on.
   # default: 8002
   port: 8002
 
