feature: update images tag to v0.1.0.beta
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/kustomize/single-cluster-openkruise/bases/kustomization.yaml
+++ b/deploy/kustomize/single-cluster-openkruise/bases/kustomization.yaml
@@ -27,10 +27,10 @@ configMapGenerator:
   - cdn/cdn.yaml
 images:
 - name: dragonflyoss/cdn
-  newTag: v0.1.0-alpha.1
+  newTag: v0.1.0-beta
 - name: dragonflyoss/dfget
-  newTag: v0.1.0-alpha.1
+  newTag: v0.1.0-beta
 - name: dragonflyoss/scheduler
-  newTag: v0.1.0-alpha.1
+  newTag: v0.1.0-beta
 - name: bitnami/kubectl
-  newTag: latest
+  newTag: "1.20"
