--- a/client/config/testdata/config/daemon.yaml
+++ b/client/config/testdata/config/daemon.yaml
@@ -1,83 +1,83 @@
-alive_time: 0s
-gc_interval: 1m0s
+aliveTime: 0s
+gcInterval: 1m0s
 pid_file: /tmp/dfdaemon.pid
 lock_file: /tmp/dfdaemon.lock
-data_dir: /tmp/dragonfly/dfdaemon/
-work_home: /tmp/dragonfly/dfdaemon/
-keep_storage: false
+dataDir: /tmp/dragonfly/dfdaemon/
+workHome: /tmp/dragonfly/dfdaemon/
+keepStorage: false
 scheduler:
-  net_addrs:
+  netAddrs:
     - type: tcp
       addr: 127.0.0.1:8002
-  schedule_timeout: 0
+  scheduleTimeout: 0
 
 host:
-  listen_ip: 0.0.0.0
-  advertise_ip: 0.0.0.0
+  listenIP: 0.0.0.0
+  advertiseIP: 0.0.0.0
   location: 0.0.0.0
   idc: d7y
-  security_domain: d7y.io
-  net_topology: d7y
+  securityDomain: d7y.io
+  netTopology: d7y
 
 download:
-  total_rate_limit: 200Mi
-  per_peer_rate_limit: 20Mi
-  download_grpc:
+  totalRateLimit: 200Mi
+  perPeerRateLimit: 20Mi
+  downloadGRPC:
     security:
       insecure: true
-      ca_cert: ca_cert
+      caCert: caCert
       cert: cert
       key: key
-      tls_config: null
-    unix_listen:
+      tlsConfig: null
+    unixListen:
       socket: /tmp/dfdaemon.sock
-  peer_grpc:
+  peerGRPC:
     security:
       insecure: true
-      ca_cert: ca_cert
+      caCert: caCert
       cert: cert
       key: key
-      tls_config: null
-    tcp_listen:
+      tlsConfig: null
+    tcpListen:
       listen: 0.0.0.0
       port: 65000
 
 upload:
-  rate_limit: 100Mi
+  rateLimit: 100Mi
   security:
     insecure: true
-    ca_cert: ca_cert
+    caCert: caCert
     cert: cert
     key: key
-  tcp_listen:
+  tcpListen:
     listen: 0.0.0.0
     port: 65002
 
 storage:
-  data_path: /tmp/storage/data
-  task_expire_time: 3m0s
+  dataPath: /tmp/storage/data
+  taskExpireTime: 3m0s
   strategy: io.d7y.storage.v2.simple
 
 proxy:
   security:
     insecure: true
-    ca_cert: ca_cert
+    caCert: caCert
     cert: cert
     key: key
-    tls_config: null
-  tcp_listen:
+    tlsConfig: null
+  tcpListen:
     listen: 0.0.0.0
     port: 65001
-  registry_mirror:
+  registryMirror:
     url: https://index.docker.io
     insecure: true
     direct: false
   proxies:
     - regx: blobs/sha256.*
-      use_https: false
+      useHTTPS: false
       direct: false
       redirect: d7y.io
-  hijack_https:
+  hijackHTTPS:
     cert: cert
     key: key
     hosts:
