--- a/deploy/charts/dragonfly/templates/namespace.yaml
+++ b/deploy/charts/dragonfly/templates/namespace.yaml
@@ -1,7 +1,6 @@
-{{ if eq $.Values.installation.namespace "kube-system" }}
-{{ else }}
+{{- if ne $.Values.installation.namespace "kube-system" }}
 apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ $.Values.installation.namespace }}
-{{ end }}
+{{- end }}
