--- a/deploy/kustomize/single-cluster-native/bases/kustomization.yaml
+++ b/deploy/kustomize/single-cluster-native/bases/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: dragonfly
+namespace: dragonfly-system
 resources:
 - namespace.yaml
 - cdn/rabc.yaml
@@ -27,10 +27,10 @@ configMapGenerator:
   - cdn/cdn.yaml
 images:
 - name: dragonflyoss/cdn
-  newTag: latest
+  newTag: v0.1.0-beta
 - name: dragonflyoss/dfget
-  newTag: latest
+  newTag: v0.1.0-beta
 - name: dragonflyoss/scheduler
-  newTag: latest
+  newTag: v0.1.0-beta
 - name: bitnami/kubectl
-  newTag: latest
+  newTag: 1.20
