--- a/deploy/kustomize/single-cluster-native/overlays/sample/kustomization.yaml
+++ b/deploy/kustomize/single-cluster-native/overlays/sample/kustomization.yaml
@@ -1,12 +1,10 @@
+namespace: dragonfly-system
 resources:
 - ../../bases
 images:
 - name: dragonflyoss/cdn
-  newName: sample.com/d7y/cdn
-  newTag: latest
+  newTag: v0.1.0-beta
 - name: dragonflyoss/dfget
-  newName: sample.com/d7y/dfget
-  newTag: latest
+  newTag: v0.1.0-beta
 - name: dragonflyoss/scheduler
-  newName: sample.com/d7y/scheduler
-  newTag: latest
+  newTag: v0.1.0-beta
