--- a/deploy/charts/dragonfly/values.yaml
+++ b/deploy/charts/dragonfly/values.yaml
@@ -38,10 +38,10 @@ scheduler:
     staticCDN: true
     debug: false
     worker:
-      worker-num: 1
-      worker-job-pool-size: 10000
-      sender-num: 10
-      sender-job-pool-size: 10000
+      workerNum: 4
+      workerJobPoolSize: 10000
+      senderNum: 10
+      senderJobPoolSize: 10000
 
 cdn:
   name: cdn
