--- a/deploy/charts/dragonfly/values.yaml
+++ b/deploy/charts/dragonfly/values.yaml
@@ -12,7 +12,7 @@ scheduler:
   fullnameOverride: ""
   replicas: 3
   image: dragonflyoss/scheduler
-  tag: v0.1.0-alpha.1
+  tag: v0.1.0-beta
   pullPolicy: IfNotPresent
   resources:
     requests:
@@ -38,10 +38,10 @@ scheduler:
     staticCDN: true
     debug: false
     worker:
-      worker-num: 1
-      worker-job-pool-size: 10000
-      sender-num: 10
-      sender-job-pool-size: 10000
+      workerNum: 4
+      workerJobPoolSize: 10000
+      senderNum: 10
+      senderJobPoolSize: 10000
 
 cdn:
   name: cdn
@@ -49,7 +49,7 @@ cdn:
   fullnameOverride: ""
   replicas: 3
   image: dragonflyoss/cdn
-  tag: v0.1.0-alpha.1
+  tag: v0.1.0-beta
   kubectlImage: bitnami/kubectl
   pullPolicy: Always
   resources:
@@ -111,7 +111,7 @@ dfdaemon:
   nameOverride: ""
   fullnameOverride: ""
   image: dragonflyoss/dfget
-  tag: v0.1.0-alpha.1
+  tag: v0.1.0-beta
   pullPolicy: IfNotPresent
   resources:
     requests:
