fix: wrong daemon config and kubectl image tag
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
@@ -19,7 +19,7 @@ data:
       {{- $count := .Values.scheduler.replicas | int}}
       {{- range $i, $x := until $count }}
       - type: tcp
-        addr: {{template "dragonfly.scheduler.fullname" $ }}-{{$i}}.{{ $.Release.Namespace }}.svc{{ $.Values.installation.clusterDomain }}:{{ $.Values.scheduler.service.port }}
+        addr: {{template "dragonfly.scheduler.fullname" $ }}-{{$i}}.{{ $.Values.installation.namespace }}.svc{{ $.Values.installation.clusterDomain }}:{{ $.Values.scheduler.service.port }}
       {{- end }}
       scheduleTimeout: 5m
     host:
