feature: support containerd 1.5.0+ in helm
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon/dfdaemon-configmap.yaml
@@ -33,7 +33,7 @@ data:
     proxy:
       tcpListen:
     {{- if not .Values.dfdaemon.hostNetwork }}
-        namespace: /host/ns/net
+        namespace: {{ .Values.dfdaemon.config.proxy.tcpListen.namespace }}
     {{- end }}
         listen: {{ .Values.dfdaemon.config.proxy.tcpListen.listen }}
         port: {{ .Values.dfdaemon.config.proxy.tcpListen.port }}
